--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,7 +5,7 @@ body {
   color: #e0e0e0;
   margin: 0;
   padding: 0;
-  overflow: hidden; /* Prevent body scroll */
+  /* overflow: hidden; */ /* Prevent body scroll */
 }
 
 .main-btn, .sub-btn {
